# pgque

./: .gitignore  .gitmodules  CLAUDE.md  README.md
benchmark/: HARDWARE.md  METHODOLOGY.md  OPS_GOTCHAS.md  R10.md  README.md
benchmarks/: consumer_bench.sql  dead_tuple_check.sql  insert_bench.sql  run_benchmarks.sh
blueprints/: BETTER_DOCS.md  COOPERATIVE_CONSUMERS.md  IDEMPOTENCY_DESIGN.md  PHASES.md  SPECx.md
ci/: Dockerfile.pgcron
clients/: README.md
clients/python/: README.md  RELEASE.md  pyproject.toml
clients/python/pgque/: __init__.py  client.py  consumer.py  types.py
clients/python/tests/: conftest.py  test_consumer.py  test_consumer_listen_stop.py  test_consumer_resilience.py  test_nack.py  test_parity.py  test_producer.py  test_receive.py  test_send.py  test_smoke.py
docs/: README.md  benchmarks.md  concepts.md  examples.md  installation.md  latency-and-tuning.md  monitoring.md  pgq-concepts.md  reference.md  three-latencies.md  tick-frequency.md  tutorial.md  upgrading.md
sql/: pgque-install.sql  pgque-tle.sql  pgque-uninstall.sql  pgque.sql  pgque_uninstall.sql
tests/: run_all.sql  run_experimental.sql  test_api_delayed.sql  test_api_dlq.sql  test_api_receive.sql  test_api_send.sql  test_config_hardening.sql  test_coop_concurrency.sql  test_coop_ultrareview.sql  test_cooperative_consumers.sql  test_core_consumer.sql  test_core_events.sql  test_core_lifecycle.sql  test_core_retry.sql  test_core_rotation.sql  test_core_ticker.sql  test_experimental_config_api.sql  test_get_queue_info_reader.sql  test_install_idempotency.sql  test_legacy_next_batch_role_guard.sql  test_observability.sql  test_partition_keys.sql  test_pgque_additions.sql  test_pgque_config.sql  test_pgque_roles.sql  test_queue_name_length.sql  test_receive_coop_contracts.sql  test_receive_empty_batch.sql  test_security_definer.sql  test_security_producer_isolation.sql  (+12 more)
(+204 files in other folders)
